# omuraisu-library

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  library.json
cmake/: omuraisu-config.cmake.in
examples/: CMakeLists.txt  coordinate_example.cpp  mecanum_example.cpp  pid_example.cpp
include/omuraisu/c/sensor/amt21/: amt21_core.h
include/omuraisu/c/serial/: serial_cube.h  serial_interface.h  serial_stm32.h
include/omuraisu/c/vesc/: vesc_core.h
include/omuraisu/cpp/serial/: serial_boost.hpp  serial_interface.hpp  serial_mbed.hpp
src/chassis/: mecanum.hpp
src/controller/: controller_can.hpp  controller_core.hpp  controller_serial.hpp  controller_transport.c
src/coordinate/: coordinate.cpp  coordinate.hpp
src/cpp/serial/: serial_boost.cpp  serial_interface.cpp  serial_mbed.cpp
src/dji/: can_interface.hpp  can_mbed.hpp  robomas.hpp  robomas_core.hpp
src/pid/: pid.hpp
src/sensor/amt21/: amt21_core.c
src/serial/: serial_cube.c  serial_interface.c  serial_stm32.c
src/servo/: servo_core.hpp
src/vesc/: vesc_core.c
